# poc_mongodb

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
.devcontainer/: compose.yml  devcontainer.dockerfile  devcontainer.json
scripts/: dump_atlas_data.bash  restore_to_docker_from_backup.bash
src/: lib.rs  main.rs
src/poc/: atlas.rs  docker_container.rs  mod.rs
src/poc/usage_examples/: count.rs  delete.rs  distinct.rs  find_document.rs  insert.rs  mod.rs  multi_insert.rs  multiple_delete.rs  multiple_find.rs  multiple_insert.rs  multiple_update.rs  replace.rs  update.rs
