[package]
name = "poc_mongodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
mongodb = { version = "2.8.2", features = ["tokio-runtime"] }
tokio = "1.37.0"
serde = "1"
anyhow = "1.0.86"
